--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -2,12 +2,12 @@
 
 @font-face {
     font-family: quicksand;
-    src: url(.../fonts/Quicksand-Bold.ttf);
+    src: url(../fonts/Quicksand-Bold.ttf);
     font-weight: bold;
 }
 @font-face {
     font-family: quicksand;
-    src: url(.../fonts/Quicksand-Regular.ttf);
+    src: url(../fonts/Quicksand-Regular.ttf);
 }
 
 /* Colors */
