Add cards section and change banner

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -14,8 +14,12 @@
 
 $primary-color1: #1d1d1b;
 $primary-color2: #ffdc00;
+$primary-color2-opacity1: #554c14;
+$primary-color2-opacity2: #8e7c0d;
+$primary-color2-opacity3: #c6ac06;
 $white: #ffffff;
 $black: #000000;
+$bg-color: #f7f7f7;
 
 
 
