--- a/src/sass/sections/_cardsArea.scss
+++ b/src/sass/sections/_cardsArea.scss
@@ -17,7 +17,7 @@
   }
   .card-body {
     position: relative;
-    background-color: $bg-color;
+    background-color: white;
     bottom: 30%;
     left: 40%;
     width: 700px;
@@ -28,7 +28,7 @@
     }
   }
   .right-card-body{
-    bottom: 30%;
+    bottom: 27%;
     left: 11%;
   }
 }
