--- a/src/sass/sections/_cardsArea.scss
+++ b/src/sass/sections/_cardsArea.scss
@@ -1,45 +1,46 @@
-.card-container {
-  max-width: 1500px;
-}
-
-.card {
-  border: none;
-  background-color: $bg-color;
-  max-height: 700px;
-  .card-img-top {
-    max-width: 800px;
-    height: auto;
-    margin: 0 40px;
-    transition: all 1s;
+.cards-area {
+  padding-bottom: 50px;
+  .card-container {
+    max-width: 1500px;
   }
-  .right-card-img{
-    align-self: end;
-  }
-  .card-body {
-    position: relative;
-    background-color: white;
-    bottom: 30%;
-    left: 40%;
-    width: 700px;
-    height: 290px;
-    border-top: solid 2px $primary-color2;
-    .wrapper {
-      padding: 60px;
+  .card {
+    border: none;
+    background-color: $bg-color;
+    max-height: 700px;
+    .card-img-top {
+      max-width: 800px;
+      height: auto;
+      margin: 0 40px;
+      transition: all 1s;
+    }
+    .right-card-img{
+      align-self: end;
+    }
+    .card-body {
+      position: relative;
+      background-color: white;
+      bottom: 30%;
+      left: 40%;
+      width: 700px;
+      height: 290px;
+      border-top: solid 2px $primary-color2;
+      .wrapper {
+        padding: 60px;
+      }
+    }
+    .right-card-body{
+      bottom: 27%;
+      left: 11%;
     }
   }
-  .right-card-body{
-    bottom: 27%;
-    left: 11%;
+  .left-card:hover .left-card-img {
+    -webkit-box-shadow: -17px 18px 0px 18px rgba(255,220,0,1);
+    -moz-box-shadow: -17px 18px 0px 18px rgba(255,220,0,1);
+    box-shadow: -17px 18px 0px 18px rgba(255,220,0,1);
   }
-}
-
-.left-card:hover .left-card-img {
-  -webkit-box-shadow: -17px 18px 0px 18px rgba(255,220,0,1);
-  -moz-box-shadow: -17px 18px 0px 18px rgba(255,220,0,1);
-  box-shadow: -17px 18px 0px 18px rgba(255,220,0,1);
-}
-.right-card:hover .right-card-img {
-  -webkit-box-shadow: 18px 18px 0px 18px rgba(255,220,0,1);
-  -moz-box-shadow: 18px 18px 0px 18px rgba(255,220,0,1);
-  box-shadow: 18px 18px 0px 18px rgba(255,220,0,1);
+  .right-card:hover .right-card-img {
+    -webkit-box-shadow: 18px 18px 0px 18px rgba(255,220,0,1);
+    -moz-box-shadow: 18px 18px 0px 18px rgba(255,220,0,1);
+    box-shadow: 18px 18px 0px 18px rgba(255,220,0,1);
+  }
 }
