--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,6 +4,7 @@
 @import "components/banner";
 @import "components/header";
 @import "components/footer";
+@import "components/buttons";
 
-@import "sections/numbersArea";
 @import "sections/cardsArea";
+@import "sections/featureArea";
