--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -13,7 +13,7 @@
 /* Colors */
 
 $primary-color1: #1d1d1b;
-$primary-color2: #ffdc00;
+$primary-color2: #ffed00;
 $primary-color2-opacity1: #554c14;
 $primary-color2-opacity2: #8e7c0d;
 $primary-color2-opacity3: #c6ac06;
