--- a/src/sass/sections/_cardsArea.scss
+++ b/src/sass/sections/_cardsArea.scss
@@ -1,4 +1,5 @@
 .cards-area {
+  margin-top: 90px;
   padding-bottom: 50px;
   .card-container {
     max-width: 1500px;
@@ -34,13 +35,13 @@
     }
   }
   .left-card:hover .left-card-img {
-    -webkit-box-shadow: -17px 18px 0px 18px rgba(255,220,0,1);
-    -moz-box-shadow: -17px 18px 0px 18px rgba(255,220,0,1);
-    box-shadow: -17px 18px 0px 18px rgba(255,220,0,1);
+    -webkit-box-shadow: -17px 18px 0px 18px rgba(255, 237, 0,1);
+    -moz-box-shadow: -17px 18px 0px 18px rgba(255, 237, 0,1);
+    box-shadow: -17px 18px 0px 18px rgba(255, 237, 0,1);
   }
   .right-card:hover .right-card-img {
-    -webkit-box-shadow: 18px 18px 0px 18px rgba(255,220,0,1);
-    -moz-box-shadow: 18px 18px 0px 18px rgba(255,220,0,1);
-    box-shadow: 18px 18px 0px 18px rgba(255,220,0,1);
+    -webkit-box-shadow: 18px 18px 0px 18px rgba(255, 237, 0,1);
+    -moz-box-shadow: 18px 18px 0px 18px rgba(255, 237, 0,1);
+    box-shadow: 18px 18px 0px 18px rgba(255, 237, 0,1);
   }
 }
