Add content text and fix a few components

--- a/src/sass/sections/_cardsArea.scss
+++ b/src/sass/sections/_cardsArea.scss
@@ -24,7 +24,7 @@
       left: 40%;
       width: 700px;
       height: 290px;
-      border-top: solid 2px $primary-color2;
+      border-top: solid 2px rgba(225,0,0,1);
       .wrapper {
         padding: 60px;
       }
