--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -6,7 +6,9 @@
 @import "components/footer";
 @import "components/buttons";
 
-@import "sections/cardsArea";
 @import "sections/featureArea";
 @import "sections/contactArea";
 @import "sections/galleryArea";
+@import "sections/servicesArea";
+@import "sections/aboutArea";
+@import "sections/cardsArea";
