--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -7,7 +7,11 @@
   color: white;
   background: $primary-color1;
   letter-spacing: 1px;
-
+  text-decoration: none;
+  &:hover {
+    text-decoration: none;
+    color: $primary-color2;
+  }
   &.second-bg {
     background: $primary-color1;
   }
