--- a/src/sass/sections/_featureArea.scss
+++ b/src/sass/sections/_featureArea.scss
@@ -1,13 +1,22 @@
 .featureArea {
   padding-top: 10px;
-  background-color: $primary-color2;
-  &.feature--about {
+  background: rgb(255,237,0);
+  background: linear-gradient(180deg, rgba(255,237,0,1) 0%, rgba(225,0,0,1) 100%);
+  .featureText {
+    padding-top: 80px;
     .section-title {
+      margin-bottom: 20px;
       span {
-        color: #0071e4;
+        font-weight: bold;
+      }
+      h2 {
+        font-size: 25px;
       }
     }
-    .feature__item {
+    p {
+      margin-bottom: 26px;
+    }
+    .featureItem {
       background: #f5f5f5;
       h5 {
           color: $primary-color1;
@@ -15,19 +24,11 @@
     }
   }
 }
-.feature__text {
-  padding-top: 80px;
-  .section-title {
-    margin-bottom: 20px;
-  }
-  p {
-    margin-bottom: 26px;
-  }
-}
-.feature__item {
+
+.featureItem {
   background: $primary-color1;
   text-align: center;
-  padding: 40px 10px 35px;
+  padding: 20px 10px 15px;
   margin-bottom: 30px;
   &.right-column {
     margin-top: 120px;
@@ -46,7 +47,7 @@
   position: relative;
   width: 100%;
   height: 25px;
-  background: $primary-color2;
+  background: rgba(225,0,0,1);
   top: 31px;
   z-index: 99;
   clip-path: polygon(50% 100%, 0 0, 100% 0);
