--- a/src/sass/sections/_galleryArea.scss
+++ b/src/sass/sections/_galleryArea.scss
@@ -11,3 +11,13 @@
   margin-top: 15px;
   margin-bottom: 15px;
 }
+
+.galleryArea {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  .topText {
+    font-weight: bold;
+    text-align: center;
+    font-size: 30px;
+  }
+}
