Fix middle card at google chrome

--- a/src/sass/sections/_cardsArea.scss
+++ b/src/sass/sections/_cardsArea.scss
@@ -15,7 +15,8 @@
       transition: all 1s;
     }
     .right-card-img{
-      align-self: end;
+      position: relative;
+      left: 38%;
     }
     .card-body {
       position: relative;
