--- a/src/sass/components/_banner.scss
+++ b/src/sass/components/_banner.scss
@@ -9,7 +9,7 @@
   position: absolute;
   content:'';
   width: 100%;
-  height: 500px;
+  height: 505px;
   background: $primary-color2;
   top: 0;
   clip-path: polygon(41.56% 0, 28% 88%, 100% 95%, 100% 100%, 0 100%, 0 0);
@@ -25,6 +25,9 @@ svg.intro {
   left: 1%;
   text-align: center;
   margin-right: 20px;
+  @media (max-width: 700px) {
+    top: 22%;
+  }
 
   .text {
     display: none;
