--- a/src/sass/sections/_aboutArea.scss
+++ b/src/sass/sections/_aboutArea.scss
@@ -1,4 +1,4 @@
-.ftco-about{
+.aboutArea{
 	position: relative;
 	z-index: 0;
 	&:after{
@@ -11,8 +11,19 @@
   	background: linear-gradient(180deg, rgba(255,237,0,1) 0%, rgba(225,0,0,1) 100%);
 		z-index: -2;
 		width: 63%;
-    }
+  }
   .container {
     padding: 100px 0;
+  }
+  .img {
+    height: 600px;
+    @media (max-width: 767px) {
+      margin: 0 30px 40px 30px;
+    }
+  }
+  @media (max-width: 767px) {
+    .wrap-about {
+    margin: 0 30px;
+    }
   }
 }
