--- a/src/sass/sections/_contactArea.scss
+++ b/src/sass/sections/_contactArea.scss
@@ -37,6 +37,10 @@
         color: $primary-color1;
         span {
           display: block;
+          a {
+            text-decoration: none;
+            color: $primary-color1;
+          }
         }
       }
     }
