--- a/src/sass/sections/_featureArea.scss
+++ b/src/sass/sections/_featureArea.scss
@@ -4,6 +4,9 @@
   background: linear-gradient(180deg, rgba(255,237,0,1) 0%, rgba(225,0,0,1) 100%);
   .featureText {
     padding-top: 80px;
+    @media (max-width: 991px) {
+      padding-top: 30px;
+    }
     .section-title {
       margin-bottom: 20px;
       span {
@@ -30,14 +33,22 @@
   text-align: center;
   padding: 20px 10px 15px;
   margin-bottom: 30px;
-  &.right-column {
-    margin-top: 120px;
-  }
   h5 {
     font-weight: 700;
     text-transform: uppercase;
     color: white;
     margin-top: 25px;
+  }
+}
+.right-column {
+  margin-top: 120px;
+  @media (max-width: 575px) {
+    margin-top: 0;
+  }
+}
+@media (max-width: 991px) {
+  .firstfeatureItem {
+    margin-top: 30px;
   }
 }
 
